--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <main>
         <div class="choices">
             <div class="choice" id="rock">
-                <img src="images/Rock.png">
+                <img src="Rock.png">
             </div>
             <div class="choice" id="paper">
-                <img src="images/Paper.png">
+                <img src="Paper.png">
             </div>
             <div class="choice" id="scissor">
-                <img src="images/scissor.png">
+                <img src="scissor.png">
             </div>
         </div>
         
